# chess-cpp

./: CMakeLists.txt  README.md
src/: Board.cpp  Board.h  BoardSquare.cpp  BoardSquare.h  Game.cpp  Game.h
src/Pieces/: Bishop.cpp  Bishop.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Piece.cpp  Piece.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h
